[package]
name = "password-generator"
version = "0.1.0"
description = "A cross-platform desktop application for generating random passwords."
authors = ["Austin Poor"]
license = "MIT"
repository = "https://github.com/a-poor/password-generator"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
rand = "0.8"
bcrypt = "0.13"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
